<resources>
    <string name="app_name">Sweet Home</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="statystyki_wojewodzkie">Statystyki wojewódzkie</string>
    <string name="ustaw_dom">Ustaw dom</string>
    <string name="stats_placeholder">Statystyki dla Polski z dnia:</string>
    <string name="cases_placeholder">Liczba zarażeń: X\n\nLiczba zgonów: Y</string>
    <string name="voivodeship">Województwo</string>
    <string name="cases_ratio">Stosunek zarażonych w państwie i województwie</string>
</resources>