<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_view_constraint"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    >


    <TextView
        android:id="@+id/statistics_date"
        android:layout_width="333dp"
        android:layout_height="26dp"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_placeholder"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cases_view"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_rounded"
        android:inputType="none"
        android:padding="8dp"
        android:text="@string/cases_placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_date" />

    <ImageView
        android:id="@+id/house_pic"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_margin="32dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_round_home_24"
        app:layout_constraintBottom_toTopOf="@+id/stats_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cases_view" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="16dp"
        android:text="@string/statystyki_wojewodzkie"
        app:layout_constraintBottom_toTopOf="@+id/home_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="16dp"
        android:text="@string/ustaw_dom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>